// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCodeRow renders correctly for accepted code 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#EEEEEE",
      "borderRadius": 3,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    q4BJuVrALpiaroth/dwQ/ps6w...
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#EEEEEE",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 3,
      }
    }
  >
    <svg
      fill="none"
      height={20}
      style={Object {}}
      viewBox="0 0 32 32"
      width={20}
    >
      <path
        d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
        fill="#42D689"
        style={Object {}}
      />
    </svg>
  </View>
</View>
`;

exports[`VerificationCodeRow renders correctly for input 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "borderColor": "#D1D5D8",
      "borderRadius": 3,
      "borderWidth": 1,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
      "position": "relative",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Regular",
        "fontSize": 15,
        "lineHeight": 24,
      }
    }
  >
    ab8049b95ac02e989aae8b61f...
  </Text>
  <ActivityIndicator
    animating={true}
    color="#42D689"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "backgroundColor": "#FFF",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 5,
      }
    }
  />
</View>
`;
